# Wolf4SDL

./: .gitignore  CMakeLists.txt  Changes.txt  DDWolf.VC2019.sln  DDWolf.VC2019.vcxproj  DDWolf.VC2019.vcxproj.filters  DDWolf.VC2022.sln  DDWolf.VC2022.vcxproj  DDWolf.VC2022.vcxproj.filters  DDWolf_x64.cbp  DDWolf_x86.cbp  README-VC.txt  README-codeblocks.txt  README-devcpp.txt  Readme.md  Wolf4SDL.VC2019.sln  Wolf4SDL.VC2019.vcxproj  Wolf4SDL.VC2019.vcxproj.filters  Wolf4SDL.VC2022.sln  Wolf4SDL.VC2022.vcxproj  Wolf4SDL.VC2022.vcxproj.filters  Wolf4SDL.cbp  Wolf4SDL.dev  Wolf4SDL_x64.cbp  Wolf4SDL_x86.cbp  _get-libs-mingw.bat  _get-libs-vc.bat  foreign.h  get-libs-mingw.bat  get-libs-vc.bat  gfxv_wl6.h  id_in.c  id_in.h  id_sd.c  id_us.c  id_us.h  id_vh.h  id_vl.c  id_vl.h  license-sdl.txt  (+17 more)
deprecated/: Readme.txt
src/: asmcomp.cpp  asmcomp.h  asmcref.h  audiosod.h  audiowl6.h  f_spear.h  foreign.h  gfxv_apo.h  gfxv_jap.h  gfxv_sod.h  id_ca.c  id_ca.cpp  id_ca.h  id_in.c  id_in.cpp  id_in.h  id_pm.c  id_pm.cpp  id_sd.cpp  id_sd.h  id_us.c  id_us.cpp  id_us.h  id_vh.c  id_vh.cpp  id_vh.h  id_vl.cpp  id_vl.h  sdl_winmain.cpp  version.h  vieasm.cpp  vieasm.h  wl_act1.c  wl_act1.cpp  wl_act2.c  wl_act2.cpp  wl_agent.c  wl_agent.cpp  wl_atmos.c  wl_cloudsky.cpp  (+21 more)
src/dosbox/: dbopl.h
src/mame/: fmopl.cpp
win/: DDWolf.aps  DDWolf.rc  Wolf4SDL.rc
